updates in Correlations_total.py, not ideal version

--- a/run_features/scripts/feature_selection-development-only.ipynb
+++ b/run_features/scripts/feature_selection-development-only.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "c1c6e7ab-56df-4095-84c7-bfae8ee44c51",
    "metadata": {},
    "outputs": [],
@@ -46,15 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1278dac6-0246-404e-baa7-40fd57e580f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fad32d34-213d-4a93-9758-eb6e6b2fb352",
    "metadata": {},
    "outputs": [
@@ -63,7 +55,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Started script! Loading input file... 2024-07-05 10:23:32.951676\n"
+      "Started script! Loading input file... 2024-07-19 10:03:44.134891\n"
      ]
     }
    ],
@@ -71,20 +63,18 @@
     "import sys\n",
     "import pickle\n",
     "import zstandard\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import datetime\n",
+    "from scipy.stats import rankdata\n",
+    "from scipy.stats import spearmanr\n",
     "\n",
-    "#Get feature from command line\n",
-    "if len(sys.argv) < 2:\n",
-    "    print(\"Usage: python script.py <feature>\")\n",
-    "    sys.exit(1)\n",
-    "\n",
-    "#feature = sys.argv[1]\n",
     "#feature = 'gene-familiesTEST'\n",
     "#feature = 'gene-families'\n",
     "feature = 'kmer9TEST'\n",
     "#feature = 'kmer9'\n",
+    "\n",
+    "abiotic_factor = 'salt'\n",
     "\n",
     "print()\n",
     "\n",
@@ -107,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cab7895c-660a-4ecd-9b62-599918eabdad",
    "metadata": {},
    "outputs": [
@@ -349,7 +339,7 @@
        "[5 rows x 101 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,146 +354,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d6bf35a9-a504-4714-9b9e-39980f176cbf",
-   "metadata": {},
-   "source": [
-    "## Random stuff BEGIN"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5c0441db-c7b2-4a17-b0e8-b6c469b8ba92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a9097b9c-77bb-4c33-b4db-4fcb35cacbea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.16, 0.02, 0.43, ..., -1.23, 1.37, 0.05],\n",
-       "       [-0.02, 0.78, -0.33, ..., -0.64, 0.81, 1.26],\n",
-       "       [-0.64, -1.20, 0.99, ..., -0.50, -1.09, -1.16],\n",
-       "       ...,\n",
-       "       [-0.71, 0.02, 0.09, ..., 0.36, 1.26, -0.99],\n",
-       "       [-0.43, 0.33, 1.20, ..., 0.36, -1.20, 1.71],\n",
-       "       [-0.54, -0.85, -0.81, ..., -0.78, -0.16, 1.06]])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "79ab56db-7b1f-475c-a956-9b4a1ee3f0af",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/usr/lib/python3.12/multiprocessing/pool.py\", line 125, in worker\n    result = (True, func(*args, **kwds))\n                    ^^^^^^^^^^^^^^^^^^^\n  File \"/tmp/ipykernel_30638/2143587692.py\", line 28, in create_ei\n    g = dg.DeepGraph(v)\n        ^^\nNameError: name 'dg' is not defined\n\"\"\"",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[25], line 42\u001b[0m\n\u001b[1;32m     40\u001b[0m indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m0\u001b[39m, n_processes \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     41\u001b[0m p \u001b[38;5;241m=\u001b[39m Pool()\n\u001b[0;32m---> 42\u001b[0m \u001b[43m\u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m_\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimap_unordered\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcreate_ei\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindices\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mpass\u001b[39;49;00m\n",
-      "File \u001b[0;32m/usr/lib/python3.12/multiprocessing/pool.py:873\u001b[0m, in \u001b[0;36mIMapIterator.next\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    871\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m success:\n\u001b[1;32m    872\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m value\n\u001b[0;32m--> 873\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m value\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dg' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcc9fe76-16b9-4d0e-99e3-dc603f3f88e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e05cf5c0-9579-4b1b-a79f-eaa283f262a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc725bdd-9857-4771-adfd-729acfd92a3f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5004f44b-de4e-42b5-9c8a-3e620961c23e",
-   "metadata": {},
-   "source": [
-    "## RANdom stuff end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "e4e6d243-229e-4b1f-a436-5ee3a43a083f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7255, 100)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Separar as features (X) e o grupos (y)\n",
-    "#Full dataset:\n",
-    "#X = df.iloc[:, :-1]  \n",
-    "#y = df.iloc[:, -1] \n",
-    "\n",
-    "#Subset for developing:\n",
-    "X = df.iloc[:, 0:100]\n",
-    "y = df.iloc[:, -1] \n",
-    "\n",
-    "X.head()\n",
-    "X.shape\n",
-    "\n",
-    "#X['Oxygen tolerance'] = y\n",
-    "\n",
-    "#Save calculations to file\n",
-    "#with zstandard.open('/home/bia/Documents/bacterial_phenotypes/connecting_features_abFactors/df_oxygen_gene-familiesTEST_selected-filterNA.pickle.zst', 'wb') as f:#\n",
-    "#with zstandard.open('/home/bia/Documents/bacterial_phenotypes/connecting_features_abFactors/df_oxygen_kmer9TEST_selected-filterNA.pickle.zst', 'wb') as f:\n",
-    "#\tpickle.dump(X, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8a44af7a-768b-4401-adb2-b91a2c7710e1",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +589,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -746,7 +599,7 @@
        "(100, 100)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,58 +610,19 @@
     "X = df.iloc[:, :-1]  \n",
     "y = df.iloc[:, -1] \n",
     "\n",
-    "### Remove columns with zero variance just for developing\n",
-    "#X = df.loc[:, pre_X.var() != 0]\n",
+    "#Subset for developing:\n",
+    "#X = df.iloc[:, 0:100]\n",
+    "#y = df.iloc[:, -1] \n",
     "\n",
-    "#pre_X.head()\n",
     "X.head()\n",
     "X.shape\n",
-    "#y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2f0f9576-dbb2-4187-8e78-d93e6b59b6d2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removing zero-variance features... 2024-07-02 15:04:54.747517\n",
-      "Number of zero-variance features: 0 , or: 0.0 % of the total of features\n",
-      " Shape of dataframe without zero-variance features: (100, 100)\n",
-      " Any NAs in the dataframe? False\n"
-     ]
-    }
-   ],
-   "source": [
-    "#NEW BLOCK TO REMOVE ZERO-VARIANCE FEATURES\n",
     "\n",
-    "print(\"Removing zero-variance features...\", datetime.datetime.now())\n",
+    "#X['Oxygen tolerance'] = y\n",
     "\n",
-    "#Calculate variance for each feature/column\n",
-    "variances = X.var()\n",
-    "\n",
-    "#Identify columns with zero variance\n",
-    "zero_variance_columns = variances[variances == 0].index\n",
-    "#print(zero_variance_columns)\n",
-    "\n",
-    "print(\"Number of zero-variance features:\", len(zero_variance_columns), ', or:', round( (len(zero_variance_columns)/len(X.columns))*100, 1 ), '% of the total of features')\n",
-    "\n",
-    "#Drop zero-variance features\n",
-    "X = X.drop(columns=zero_variance_columns)\n",
-    "\n",
-    "print(\" Shape of dataframe without zero-variance features:\", X.shape)\n",
-    "print(\" Any NAs in the dataframe?\", X.isnull().any().any() )\n",
-    "\n",
-    "#print(\"Columns with zero variance:\")\n",
-    "#print(columns_with_zero_variance)\n",
-    "#columns_with_zero_variance.shape\n",
-    "\n",
-    "\n",
-    "#df = df.drop(columns=['column_nameA', 'column_nameB'])"
+    "#Save calculations to file\n",
+    "#with zstandard.open('/home/bia/Documents/bacterial_phenotypes/connecting_features_abFactors/df_oxygen_gene-familiesTEST_selected-filterNA.pickle.zst', 'wb') as f:#\n",
+    "#with zstandard.open('/home/bia/Documents/bacterial_phenotypes/connecting_features_abFactors/df_oxygen_kmer9TEST_selected-filterNA.pickle.zst', 'wb') as f:\n",
+    "#\tpickle.dump(X, f)"
    ]
   },
   {
