--- a/run_features/scripts/remove_zero-variance.ipynb
+++ b/run_features/scripts/remove_zero-variance.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "32d1043a-ac3f-43b2-b953-abe949fc3819",
    "metadata": {},
    "outputs": [
@@ -48,8 +48,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started script! Loading input file... 2024-07-25 08:47:30.314321\n",
-      "Loaded input pickle zst file... 2024-07-25 08:47:39.740133\n"
+      "Started script! Loading input file... 2024-07-25 15:10:56.735997\n",
+      "Loaded input pickle zst file... 2024-07-25 15:10:56.869328\n"
      ]
     },
     {
@@ -73,27 +73,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AAAAAAAAA</th>\n",
-       "      <th>AAAAAAAAC</th>\n",
-       "      <th>AAAAAAAAG</th>\n",
-       "      <th>AAAAAAAAT</th>\n",
-       "      <th>AAAAAAACA</th>\n",
-       "      <th>AAAAAAACC</th>\n",
-       "      <th>AAAAAAACG</th>\n",
-       "      <th>AAAAAAACT</th>\n",
-       "      <th>AAAAAAAGA</th>\n",
-       "      <th>AAAAAAAGC</th>\n",
+       "      <th>COG3696@2</th>\n",
+       "      <th>COG0606@2</th>\n",
+       "      <th>33SZW@2</th>\n",
+       "      <th>COG0774@1</th>\n",
+       "      <th>COG5009@2</th>\n",
+       "      <th>COG0188@2</th>\n",
+       "      <th>COG0265@2</th>\n",
+       "      <th>COG3270@1</th>\n",
+       "      <th>2Z7XP@2</th>\n",
+       "      <th>COG1086@2</th>\n",
        "      <th>...</th>\n",
-       "      <th>TTTCTCAAA</th>\n",
-       "      <th>TTTGAAAAA</th>\n",
-       "      <th>TTTGACAAA</th>\n",
-       "      <th>TTTGCAAAA</th>\n",
-       "      <th>TTTGCCAAA</th>\n",
-       "      <th>TTTGGAAAA</th>\n",
-       "      <th>TTTGTAAAA</th>\n",
-       "      <th>TTTTAAAAA</th>\n",
-       "      <th>TTTTCAAAA</th>\n",
-       "      <th>Oxygen tolerance</th>\n",
+       "      <th>arCOG06650@2157</th>\n",
+       "      <th>Viruses,4R0IQ@35237</th>\n",
+       "      <th>arCOG09713@2157</th>\n",
+       "      <th>arCOG07735@2157</th>\n",
+       "      <th>arCOG07334@2157</th>\n",
+       "      <th>arCOG04203@2157</th>\n",
+       "      <th>arCOG01811@2157</th>\n",
+       "      <th>arCOG00087@2157</th>\n",
+       "      <th>arCOG07496@2157</th>\n",
+       "      <th>Salinity group</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Best assembly</th>\n",
@@ -122,177 +122,185 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1002367.3</th>\n",
-       "      <td>53</td>\n",
-       "      <td>72</td>\n",
-       "      <td>54</td>\n",
-       "      <td>82</td>\n",
-       "      <td>96</td>\n",
-       "      <td>11</td>\n",
-       "      <td>52</td>\n",
-       "      <td>52</td>\n",
-       "      <td>95</td>\n",
-       "      <td>46</td>\n",
+       "      <th>1121349.4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>37</td>\n",
-       "      <td>74</td>\n",
-       "      <td>49</td>\n",
-       "      <td>98</td>\n",
-       "      <td>59</td>\n",
-       "      <td>36</td>\n",
-       "      <td>54</td>\n",
-       "      <td>69</td>\n",
-       "      <td>66</td>\n",
-       "      <td>anaerobe</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>medium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1006155.5</th>\n",
-       "      <td>47</td>\n",
-       "      <td>87</td>\n",
-       "      <td>88</td>\n",
-       "      <td>137</td>\n",
-       "      <td>237</td>\n",
-       "      <td>80</td>\n",
-       "      <td>131</td>\n",
-       "      <td>139</td>\n",
-       "      <td>229</td>\n",
-       "      <td>159</td>\n",
+       "      <th>1121909.4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>84</td>\n",
-       "      <td>314</td>\n",
-       "      <td>65</td>\n",
-       "      <td>180</td>\n",
-       "      <td>75</td>\n",
-       "      <td>161</td>\n",
-       "      <td>133</td>\n",
-       "      <td>268</td>\n",
-       "      <td>324</td>\n",
-       "      <td>anaerobe</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>high</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1008452.3</th>\n",
-       "      <td>14</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "      <td>39</td>\n",
-       "      <td>78</td>\n",
-       "      <td>14</td>\n",
-       "      <td>41</td>\n",
-       "      <td>64</td>\n",
-       "      <td>104</td>\n",
-       "      <td>62</td>\n",
+       "      <th>1123508.3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>95</td>\n",
-       "      <td>248</td>\n",
-       "      <td>128</td>\n",
-       "      <td>98</td>\n",
-       "      <td>59</td>\n",
-       "      <td>114</td>\n",
-       "      <td>108</td>\n",
-       "      <td>214</td>\n",
-       "      <td>245</td>\n",
-       "      <td>facultative</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>low</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1009464.3</th>\n",
-       "      <td>30</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>24</td>\n",
-       "      <td>34</td>\n",
-       "      <td>11</td>\n",
-       "      <td>24</td>\n",
-       "      <td>23</td>\n",
-       "      <td>28</td>\n",
-       "      <td>17</td>\n",
+       "      <th>1218801.3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>35</td>\n",
-       "      <td>80</td>\n",
-       "      <td>23</td>\n",
-       "      <td>232</td>\n",
-       "      <td>77</td>\n",
-       "      <td>77</td>\n",
-       "      <td>82</td>\n",
-       "      <td>82</td>\n",
-       "      <td>85</td>\n",
-       "      <td>anaerobe</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>medium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>102684.41</th>\n",
-       "      <td>34</td>\n",
-       "      <td>38</td>\n",
-       "      <td>33</td>\n",
-       "      <td>57</td>\n",
-       "      <td>122</td>\n",
-       "      <td>30</td>\n",
-       "      <td>65</td>\n",
-       "      <td>88</td>\n",
-       "      <td>120</td>\n",
-       "      <td>105</td>\n",
+       "      <th>1420583.3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>67</td>\n",
-       "      <td>327</td>\n",
-       "      <td>158</td>\n",
-       "      <td>131</td>\n",
-       "      <td>112</td>\n",
-       "      <td>173</td>\n",
-       "      <td>100</td>\n",
-       "      <td>254</td>\n",
-       "      <td>328</td>\n",
-       "      <td>facultative</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>medium</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 131073 columns</p>\n",
+       "<p>5 rows × 20142 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               AAAAAAAAA  AAAAAAAAC  AAAAAAAAG  AAAAAAAAT  AAAAAAACA  \\\n",
+       "               COG3696@2  COG0606@2  33SZW@2  COG0774@1  COG5009@2  COG0188@2  \\\n",
+       "Best assembly                                                                   \n",
+       "1121349.4              1          0        0          0          1          1   \n",
+       "1121909.4              1          0        0          0          1          1   \n",
+       "1123508.3              1          1        0          0          0          1   \n",
+       "1218801.3              1          1        0          1          1          1   \n",
+       "1420583.3              1          1        0          0          1          1   \n",
+       "\n",
+       "               COG0265@2  COG3270@1  2Z7XP@2  COG1086@2  ...  arCOG06650@2157  \\\n",
+       "Best assembly                                            ...                    \n",
+       "1121349.4              0          0        0          0  ...                0   \n",
+       "1121909.4              0          0        0          0  ...                0   \n",
+       "1123508.3              1          0        0          0  ...                0   \n",
+       "1218801.3              1          0        0          1  ...                0   \n",
+       "1420583.3              0          0        0          0  ...                0   \n",
+       "\n",
+       "               Viruses,4R0IQ@35237  arCOG09713@2157  arCOG07735@2157  \\\n",
        "Best assembly                                                          \n",
-       "1002367.3             53         72         54         82         96   \n",
-       "1006155.5             47         87         88        137        237   \n",
-       "1008452.3             14         11         26         39         78   \n",
-       "1009464.3             30         18          5         24         34   \n",
-       "102684.41             34         38         33         57        122   \n",
+       "1121349.4                        0                0                0   \n",
+       "1121909.4                        0                0                0   \n",
+       "1123508.3                        0                0                0   \n",
+       "1218801.3                        0                0                0   \n",
+       "1420583.3                        0                0                0   \n",
        "\n",
-       "               AAAAAAACC  AAAAAAACG  AAAAAAACT  AAAAAAAGA  AAAAAAAGC  ...  \\\n",
-       "Best assembly                                                         ...   \n",
-       "1002367.3             11         52         52         95         46  ...   \n",
-       "1006155.5             80        131        139        229        159  ...   \n",
-       "1008452.3             14         41         64        104         62  ...   \n",
-       "1009464.3             11         24         23         28         17  ...   \n",
-       "102684.41             30         65         88        120        105  ...   \n",
+       "               arCOG07334@2157  arCOG04203@2157  arCOG01811@2157  \\\n",
+       "Best assembly                                                      \n",
+       "1121349.4                    0                0                0   \n",
+       "1121909.4                    0                0                0   \n",
+       "1123508.3                    0                0                0   \n",
+       "1218801.3                    0                0                0   \n",
+       "1420583.3                    0                0                0   \n",
        "\n",
-       "               TTTCTCAAA  TTTGAAAAA  TTTGACAAA  TTTGCAAAA  TTTGCCAAA  \\\n",
-       "Best assembly                                                          \n",
-       "1002367.3             37         74         49         98         59   \n",
-       "1006155.5             84        314         65        180         75   \n",
-       "1008452.3             95        248        128         98         59   \n",
-       "1009464.3             35         80         23        232         77   \n",
-       "102684.41             67        327        158        131        112   \n",
+       "               arCOG00087@2157  arCOG07496@2157  Salinity group  \n",
+       "Best assembly                                                    \n",
+       "1121349.4                    0                0          medium  \n",
+       "1121909.4                    0                0            high  \n",
+       "1123508.3                    0                0             low  \n",
+       "1218801.3                    0                0          medium  \n",
+       "1420583.3                    0                0          medium  \n",
        "\n",
-       "               TTTGGAAAA  TTTGTAAAA  TTTTAAAAA  TTTTCAAAA  Oxygen tolerance  \n",
-       "Best assembly                                                                \n",
-       "1002367.3             36         54         69         66          anaerobe  \n",
-       "1006155.5            161        133        268        324          anaerobe  \n",
-       "1008452.3            114        108        214        245       facultative  \n",
-       "1009464.3             77         82         82         85          anaerobe  \n",
-       "102684.41            173        100        254        328       facultative  \n",
-       "\n",
-       "[5 rows x 131073 columns]"
+       "[5 rows x 20142 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "(7255, 131073)"
+       "(3418, 20142)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,22 +316,22 @@
     "\n",
     "#feature = 'kmer9Classification'\n",
     "#feature = 'kmer9Regression'\n",
-    "#feature = 'gene-familiesClassification'\n",
+    "feature = 'gene-familiesClassification'\n",
     "#feature = 'gene-familiesRegression'\n",
     "#feature = 'gene-families'\n",
-    "feature = 'kmer9'\n",
+    "#feature = 'kmer9'\n",
     "\n",
-    "#abiotic_factor = 'salt'\n",
+    "abiotic_factor = 'salt'\n",
     "#abiotic_factor = 'temperature'\n",
     "#abiotic_factor = 'pH'\n",
-    "abiotic_factor = 'oxygen'\n",
+    "#abiotic_factor = 'oxygen'\n",
     "\n",
-    "#group = 'Salinity group'\n",
+    "group = 'Salinity group'\n",
     "#group = 'Salt all mean'\n",
     "#group = 'Temp group'\n",
     "#group = 'Temp all mean'\n",
     "#group = 'pH all mean'\n",
-    "group = 'Oxygen tolerance'\n",
+    "#group = 'Oxygen tolerance'\n",
     "\n",
     "file1 = '/home/bia/Documents/bacterial_phenotypes/connecting_features_abFactors/df_' + abiotic_factor + '_' + feature + '_selected-filterNA.pickle.zst'  \n",
     "\n",
@@ -799,44 +807,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7687485e-29f1-4473-ab72-dcd1b2ae0073",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['anaerobe', 'facultative', 'aerobe'], dtype=object)"
+       "array(['medium', 'high', 'low'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_3483/3239264577.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[group] = df[group].replace(['aerobe'], 1)\n"
-     ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of isolates with group low/anaerobe: 1701\n",
-      "Number of isolates with group medium/facultative: 1677\n",
-      "Number of isolates with group high:/aerobe 3877\n"
+      "Number of isolates with group low/anaerobe: 466\n",
+      "Number of isolates with group medium/facultative: 0\n",
+      "Number of isolates with group high:/aerobe 1523\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30041/4268397057.py:16: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df[group] = df[group].replace(['high'], 1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(7255, 131073)"
+       "(1989, 20142)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,15 +857,18 @@
     "\n",
     "#Oxygen\n",
     "#Replace string to int for target variable\n",
-    "df[group] = df[group].replace(['anaerobe'], 0)\n",
-    "df[group] = df[group].replace(['facultative'], 2)\n",
-    "df[group] = df[group].replace(['aerobe'], 1)\n",
+    "#df[group] = df[group].replace(['anaerobe'], 0)\n",
+    "#df[group] = df[group].replace(['facultative'], 2)\n",
+    "#df[group] = df[group].replace(['aerobe'], 1)\n",
     "\n",
     "#Salt, temperature\n",
     "#Replace string to int for target variable\n",
-    "#df[group] = df[group].replace(['low'], 0)\n",
-    "#df[group] = df[group].replace(['medium'], 2)\n",
-    "#df[group] = df[group].replace(['high'], 1)\n",
+    "df[group] = df[group].replace(['low'], 0)\n",
+    "df[group] = df[group].replace(['medium'], 2)\n",
+    "df[group] = df[group].replace(['high'], 1)\n",
+    "\n",
+    "#df = df[df[group] != 2]\n",
+    "#IF I CONTINUE WITH THIS STRATEGY, I SHOULD ALSO DO THE UNDERSAMPLING AT THIS POINT\n",
     "\n",
     "#MAKE SURE THE NUMBER OF GROUPS IS CORRECT AND ADAPT CODE IF NECESSARY\n",
     "print('Number of isolates with group low/anaerobe:', len(df[df[group] == 0]) )\n",
