--- a/run_features/scripts/remove_zero-variance.ipynb
+++ b/run_features/scripts/remove_zero-variance.ipynb
@@ -48,9 +48,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started script! Loading input file... 2024-10-09 14:08:26.567957\n",
+      "Started script! Loading input file... 2024-10-10 09:50:54.041729\n",
       "/home/bia/Documents/bacterial_phenotypes/connecting_features_abFactors/df_salt_gene-familiesClassification_selected-filterNA.pickle.zst\n",
-      "Loaded input pickle zst file... 2024-10-09 14:08:26.701975\n"
+      "Loaded input pickle zst file... 2024-10-10 09:50:54.194455\n"
      ]
     },
     {
@@ -1568,7 +1568,9 @@
   {
    "cell_type": "markdown",
    "id": "dd3c83df-06d8-47d7-a4da-eb1d0eb1d8ce",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Understand specific variances\n",
     "\n",
@@ -2905,6 +2907,34 @@
     "x = 'COG3544@2'\n",
     "\n",
     "df[x].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a79c0aa8-1a28-4711-951d-676a2c937838",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salinity group\n",
+       "high      33\n",
+       "medium    18\n",
+       "low        4\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check salinity groups of the 55 isolates that contain the gene COG3544@2, which is one of the top 50 most important\n",
+    "# features for the SVC classification model for salinity\n",
+    "\n",
+    "df[df['COG3544@2'] == 1]['Salinity group'].value_counts()"
    ]
   },
   {
