--- a/run_features/scripts/remove_zero-variance.ipynb
+++ b/run_features/scripts/remove_zero-variance.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "markdown",
    "id": "dde1800c-95c3-4d4b-b402-e35e9da95b9e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Import input"
    ]
@@ -803,7 +805,9 @@
   {
    "cell_type": "markdown",
    "id": "ebcee323-f02f-469d-bbdb-9b77ca848101",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Create files for filtering low-variance features with different thresholds"
    ]
@@ -1349,7 +1353,9 @@
   {
    "cell_type": "markdown",
    "id": "9208d71a-1f9b-4aac-adba-6993b877220c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Benchmark"
    ]
@@ -3501,7 +3507,9 @@
   {
    "cell_type": "markdown",
    "id": "7facff77-aa30-48fe-b5f6-e7dba314a64b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Plot"
    ]
