--- a/run_features/scripts/feature_selection_Aris_methods.ipynb
+++ b/run_features/scripts/feature_selection_Aris_methods.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "markdown",
    "id": "f0a80b0a-a1f8-4aec-b6f1-938cce250f1c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Load input files\n",
     "\n",
@@ -44,7 +46,9 @@
   {
    "cell_type": "markdown",
    "id": "78d68f94-23ce-4488-a293-717dea9368fa",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Input dataframe containing original features and target variable"
    ]
@@ -605,7 +609,9 @@
   {
    "cell_type": "markdown",
    "id": "831ccee3-e48f-4deb-b128-eee63a7cce50",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Save files with different number of features: RANDOM SET/negative control"
    ]
@@ -756,7 +762,9 @@
   {
    "cell_type": "markdown",
    "id": "9d6d4453-0033-4859-9271-123bab4f6d4f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Benchmark"
    ]
@@ -780,7 +788,9 @@
   {
    "cell_type": "markdown",
    "id": "cf5d9a9f-fd3b-4b64-a811-0a849a5bd987",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Classification"
    ]
@@ -1190,7 +1200,9 @@
   {
    "cell_type": "markdown",
    "id": "8ee49783-98e0-49f6-af62-7913b7b62362",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Save metrics"
    ]
@@ -1428,7 +1440,9 @@
    "id": "c8b24ecb-06fa-4040-8f95-d277db9f50f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
